# serverless_sample

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml  server.py  setup.cfg  zappa_settings template.json  サーバレスについて.md
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: CONTRIBUTING.md  conf.py  index.rst  overview.md
serverless_sample/: app.py  config.py
serverless_sample/cli/: __init__.py
serverless_sample/lib/: utils.py
serverless_sample/models/: entries.py  sessions.py
serverless_sample/templates/: layout.html  login.html
serverless_sample/templates/entries/: edit.html  index.html  new.html  show.html
serverless_sample/views/: entries.py  views.py
tests/: test_app.py
