[tool.poetry]
name = "serverless_sample"
version = "0.0.1"
description = ""
authors = ["sasano8 <y-sasahara@ys-method.com>"]
license = "MIT"
readme = "README.md"
# repository = "https://github.com/sasano8/asy"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "1.1.2"  # flaskの最新は2.0だが、依存ライブラリのWerkzeugとzappa(awsツール)のバージョンが異なるので1.1.2までしか利用できない
pynamodb = "^5.1.0"
flask-login = "^0.5.0"
flask-sessionstore = "^0.4.5"
pydantic = "^1.8.2"
python-dotenv = "^0.18.0"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
mypy = "^0.812"
isort = "^5.9.1"
pytest = "^6.2.2"
pre-commit = "^2.12.0"
sphinx = "^4.0.2"
sphinx_rtd_theme = "^0.5.2"
recommonmark = "^0.7.1"
boto3 = "^1.17.106"
typer = "^0.3.2"
click = "7.1.2"
markupsafe = "^2.0.1"
zappa = "^0.53.0"
troposphere = "3.1.0"  # 最新だとzappaが対応しておらずビルド時にエラーが生じる


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
